Fix: Forced scrollbars

--- a/less/guess.less
+++ b/less/guess.less
@@ -71,8 +71,6 @@
             margin: 0;
             margin-top: 10px;
 
-            overflow-y: scroll;
-
             &.two > li {
                 width: 46% !important;
             }
