--- a/less/main.less
+++ b/less/main.less
@@ -244,7 +244,6 @@ hr {
     &.short {
 
         .row {
-            height: 460px;
 
             .divider {
                 height: 100%;
