--- a/less/results.less
+++ b/less/results.less
@@ -35,8 +35,6 @@
             margin: 0;
             margin-top: 10px;
 
-            overflow-y: scroll;
-
             & > li {
                 float: left;
 
