--- a/less/select.less
+++ b/less/select.less
@@ -34,7 +34,6 @@
 
             margin: 0;
             margin-top: 15px;
-            overflow-y: scroll;
 
             li {
                 .rounded-corners(5px);
